# ldap2html

./: .gitignore  LICENSE  Pipfile  README.md  main.py  pyproject.toml
ldap2html/: __init__.py  config.py  convert.py  entrypoint.py  ldap2html.py  main.py
ldap2html/html/: model.py
ldap2html/html2ldif/: config.py  convert.py  main.py
ldap2html/ldap/: model.py  utils.py
ldap2html/ldap2html/: convert.py  main.py
sample/: README.md  helloworld.html.ldif  index.html.ldif
schema/: html.ldif
