[tool.poetry]
name = "ldap2html"
version = "0.1.0"
description = ""
authors = ["nonylene <nonylene@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
ldap3 = "^2.6"

[tool.poetry.dev-dependencies]
flake8 = "*"
autopep8 = "*"
rope = "*"
pylint = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
