[tool.poetry]
name = "ldap2html"
version = "0.4.0"
description = ""
homepage = "https://github.com/nonylene/ldap2html"
repository = "https://github.com/nonylene/ldap2html"
authors = ["nonylene <nonylene@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
ldap3 = "^2.6"

[tool.poetry.dev-dependencies]
flake8 = "*"
autopep8 = "*"
rope = "*"
pylint = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
ldap2html = 'ldap2html.ldap2html:main'
html2ldif = 'ldap2html.html2ldif:main'
